--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <a class="no-highlight" href="https://unstop.com/u/sanyam_jain_30" target="_blank">
             <img class="profile-icon" src="assests/unstop.png" alt="unstop" />
           </a>
+          <a class="no-highlight" href="https://rapidapi.com/user/sanyamjain007" target="_blank">
+            <img class="profile-icon" src="assests/RapidAPI.png" alt="rapidapi" />
+          </a>
         </div>
       </div>
       <div class="profile-img"></div>
@@ -467,12 +470,162 @@
         </div>
       </div>
     </div>
-    <!-- <div id="work">
+    <div id="work">
       <div class="center-gradient"></div>
       <h1 class="section-title">Works</h1>
       <div class="work-cards">
-
+        <div class="work-card">
+          <img class="work-img" src="assests/place-population-finder-api.png">
+          <div class="work-desc">
+            <h2>Place population Finder API</h2>
+            <div class="work-desc-content">
+              <p>Need population data for any Village, City, Town, District, State, Country or even Continent? Place-Population-Finder API delivers! Get instant, accurate figures with one simple call. Optimize resources, target markets, and make informed decisions.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/place-population-finder-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="design-image" src="assests/library-center-home-page.jpg">
+          <div class="work-desc">
+            <h2>Library Center Home Page</h2>
+            <div class="work-desc-content">
+              <p>A visually striking homepage harmonizing aesthetics and functionality. Engage effortlessly with an intuitive search bar, while dynamic text elements highlight book count, store statistics, and our growing community. Immerse users in a creative, user-friendly space that celebrates the essence of literature.</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1330881641301452902/library-center-home-page" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/Figma.png" alt="certificate">
+                <p>Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="design-image" src="assests/car-booking-home-page.png">
+          <div class="work-desc">
+            <h2>Car Booking Home Page</h2>
+            <div class="work-desc-content">
+              <p>Discover the epitome of car booking elegance with our captivating UI. Seamlessly explore premium vehicles, check vital details like speed and auto-pilot, set your arrival date, and unveil competitive pricing. A perfect blend of aesthetics and functionality awaits you.</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1330870654313039966/car-booking-home-page" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/Figma.png" alt="certificate">
+                <p>Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="work-img" src="assests/mood-based-quote-api.png">
+          <div class="work-desc">
+            <h2>Mood Based Quote API</h2>
+            <div class="work-desc-content">
+              <p>Feeling down? Uplifted? Stuck? Find the perfect quote for every mood with the Mood Based Quote API. Unlock a world of wisdom and elevate your apps and platforms with the power of quotes.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/mood-based-quote-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="work-img" src="assests/whose-birthday-finder-api-high-resolution-logo.png">
+          <div class="work-desc">
+            <h2>Whose Birthday Finder API</h2>
+            <div class="work-desc-content">
+              <p>Want to know whose birthdays were on a specific day? You are at right place. This API will find popular and important people whose birthdays are on the given date.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/whose-birthday-finder-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="work-img" src="assests/day-special-finder-api-high-resolution-logo.png">
+          <div class="work-desc">
+            <h2>Day Special Finder API</h2>
+            <div class="work-desc-content">
+              <p>Want to know what’s special on the specific date? Send a request here and get details of all selective, events, births, holidays, and even deaths.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/day-special-finder-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="work-img" src="assests/period-rashifal-api-high-resolution-logo.png">
+          <div class="work-desc">
+            <h2>Period Rashifal API</h2>
+            <div class="work-desc-content">
+              <p>The Period Rashifal API provides accurate and personalized horoscope predictions for all twelve Rashis, covering yesterday, today, and tomorrow, as well as weekly, monthly, and yearly forecasts.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/period-rashifal-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="work-img" src="assests/daily-rashifal-api-high-resolution-logo-black.png">
+          <div class="work-desc">
+            <h2>Daily Rashifal API</h2>
+            <div class="work-desc-content">
+              <p>The Daily Rashifal API offers current Vedic astrology horoscope predictions for all twelve Rashis (Zodiac Signs).</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/daily-rashifal-api/" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/RapidAPI.png" alt="certificate">
+                <p>Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>        
+        <div class="work-card">
+          <img class="design-image" src="assests/cleveland-website-redesign.png">
+          <div class="work-desc">
+            <h2>Cleveland Website Redesign</h2>
+            <div class="work-desc-content">
+              <p>Redesign Cleveland city website with new colors and illustrations.</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1249991871020587984/cleveland-website-redesign" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/Figma.png" alt="certificate">
+                <p>Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="work-card">
+          <img class="design-image" src="assests/foundit-redesign.png">
+          <div class="work-desc">
+            <h2>Foundit Redesign</h2>
+            <div class="work-desc-content">
+              <p>Redesign of Foundit website with new illustrations and mixture of colors. Complete prototype of Desktop view and design of Mobile view.</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1249994527731921876/foundit-redesign-mobile-desktop-view" target="_blank">
+              <span class="certificate work-detail">
+                <img src="assests/Figma.png" alt="certificate">
+                <p>Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
       </div>
-    </div> -->
+      <div class="middle-gradient"></div>
+    </div>
 </body>
 </html>
