--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="research-cards">
         <div class="research-card">
           <span class="project-decision">Awaiting Decision at Knowledge and Information Systems Journal</span>
-          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
+          <img class="research-illustrator" src="assests/research-card-05.png" alt="research" />
           <div>
             <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
             <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
@@ -152,6 +152,22 @@
         <div class="more">
           <span class="project-highlight" style="float: right;">+1 more</span>
         </div>
+        <div class="research-card" style="display: none;">
+          <span class="project-decision">Awaiting Decision at JARMIS 2023</span>
+          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
+          <div>
+            <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
+            <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
+            <div class="research-additional">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques" target="_blank">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Dec, 2023</span>
+            </div>
+          </div>
       </div>
     </div>
     <div id="grade">
@@ -285,7 +301,7 @@
             <div class="achievement-desc-content">
               <h2>Winner</h2>
               <h6>Competed 111 participants</h6>
-              <p>Pragyan’23, JC Bose University, Haryana</p>
+              <p>Pragyan'23, JC Bose University, Haryana</p>
               <a class="no-highlight" href="https://drive.google.com/file/d/1SiTW-66RJPvzDCY4cMyKHGmdfaWSa_ae/view?usp=sharing" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
@@ -627,5 +643,7 @@
       </div>
       <div class="middle-gradient"></div>
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
