--- a/index.html
+++ b/index.html
@@ -89,8 +89,14 @@
               </a>
               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/1BMMenEICztnPVW9GhtqAl04FUsLDGr6Q/view?usp=drive_link" target="_blank">
                 <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <img class="certificate-icon" src="assests/presentation.png" alt="certificate">
                   <span>Presentation</span>
+                </span>
+              </a>
+              <a class="no-highlight-certificate" href="https://link.springer.com/chapter/10.1007/978-3-031-53731-8_21" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/paper.png" alt="paper">
+                  <span>Paper</span>
                 </span>
               </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
@@ -112,7 +118,7 @@
               </a>
               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/13WRiz_pERUVZVQyW8uBEHbY1a9lpDP2y/view?usp=sharing" target="_blank">
                 <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <img class="certificate-icon" src="assests/presentation.png" alt="certificate">
                   <span>Presentation</span>
                 </span>
               </a>
@@ -141,7 +147,7 @@
               </a>
               <a class="no-highlight-certificate" href="https://drive.google.com/file/d/18UK8AQ0zhICfGl7-s_Sf4K5BPKN1weGW/view?usp=sharing" target="_blank">
                 <span class="certificate">
-                  <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                  <img class="certificate-icon" src="assests/presentation.png" alt="certificate">
                   <span>Presentation</span>
                 </span>
               </a>
