--- a/index.html
+++ b/index.html
@@ -58,24 +58,7 @@
       <h1 class="section-title">Research</h1>
       <div class="research-cards">
         <div class="research-card">
-          <span class="project-decision">Awaiting Decision at Knowledge and Information Systems Journal</span>
-          <img class="research-illustrator" src="assests/research-card-05.png" alt="research" />
-          <div>
-            <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
-            <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
-            <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Deep-Learning-Based-Framework-for-Multi-Class-Classification-of-Diverse-Cancer-Types" target="_blank">
-                <div class="github-code">
-                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                  <span>Repository</span>
-                </div>
-              </a>
-              <span class="project-highlight">Submitted: Jan, 2024</span>
-            </div>
-          </div>
-        </div>
-        <div class="research-card">
-          <span class="project-decision">Presented at icSoftComp2023</span>
+          <span class="project-decision">Published</span>
           <img class="research-illustrator" src="assests/research-card-01.png" alt="research" />
           <div>
             <h2>Inappropriate Text Detection and Rephrasing using NLP</h2>
@@ -103,6 +86,24 @@
             </div>
           </div>
         </div>
+        <div class="research-card">
+          <span class="project-decision">Awaiting Decision at Knowledge and Information Systems Journal</span>
+          <img class="research-illustrator" src="assests/research-card-05.png" alt="research" />
+          <div>
+            <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
+            <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
+            <div class="research-additional">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Deep-Learning-Based-Framework-for-Multi-Class-Classification-of-Diverse-Cancer-Types" target="_blank">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Jan, 2024</span>
+            </div>
+          </div>
+        </div>
+        
         <div class="research-card">
           <span class="project-decision">Presented at ICTCS 2023</span>
           <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
@@ -156,7 +157,7 @@
           </div>
         </div>
         <div class="more">
-          <span class="project-highlight" style="float: right;">+1 more</span>
+          <span class="project-highlight more-content" style="float: right;">+1 more</span>
         </div>
         <div class="research-card" style="display: none;">
           <span class="project-decision">Awaiting Decision at JARMIS 2023</span>
